kubernetes/apps/supertokens/backend/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supertokens-backend
  labels:
    app.kubernetes.io/name: supertokens
    app.kubernetes.io/instance: supertokens-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: supertokens
      app.kubernetes.io/instance: supertokens-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: supertokens
        app.kubernetes.io/instance: supertokens-backend
    spec:
      containers:
      - name: supertokens-backend
        image: ghcr.io/ronin-cg/auth-backend:fcd6f2f
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: ghcr-login-secret

---
apiVersion: v1
kind: Service
metadata:
  name: auth-backend
  annotations:
  labels:
    app.kubernetes.io/name: auth-backend
spec:
  selector:
    app.kubernetes.io/name: supertokens
    app.kubernetes.io/instance: supertokens-backend
  ports:
  - name: http
    port: 3001
    targetPort: 3001
  type: ClusterIP
